namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nat-go-app
  labels:
    name: nat-go-app
