ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nat-go-app-ingress
  namespace: nat-go-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: nat-go-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-world-service
            port:
              number: 44
